# python-project-template-2023

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  tox.ini  versions.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: deploy.yml  docs.yml  lint.yml  styles-only-changed.yml  styles.yml  tests.yml
0.1.6/: index.html
0.1.6/changelog/: index.html
0.1.6/reference/SUMMARY/: index.html
0.1.6/reference/zproject/: index.html
0.1.6/reference/zproject/utils/: index.html
docs/: index.md  mkdocs.md  mkdocstrings.md  zproject.md
latest/: 404.html
latest/reference/SUMMARY/: index.html
latest/zproject/: index.html
public/latest/: 404.html  index.html  objects.inv  sitemap.xml
public/latest/changelog/: index.html
public/latest/reference/SUMMARY/: index.html
public/latest/reference/zproject/: index.html
public/latest/reference/zproject/utils/: index.html
public/latest/search/: search_index.json
public/latest/zproject/: index.html
public/v0.1.0/: 404.html  index.html  sitemap.xml
public/v0.1.0/changelog/: index.html
public/v0.1.0/reference/SUMMARY/: index.html
public/v0.1.0/reference/zproject/: index.html
public/v0.1.0/reference/zproject/utils/: index.html
public/v0.1.0/zproject/: index.html
scripts/: doctest.sh  run_doctest.py
src/mlproject/: _version.py  utils.py
src/zproject/: _version.py  utils.py
tests/: conftest.py  test_add.py
tools/: color_logging_main.py
