[build-system]
requires = ["setuptools>=60", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/zproject/_version.py"
versionfile_build = "zproject/_version.py"
tag_prefix = "v"
parentdir_prefix = "zproject-"

[project]
name = "zproject"
dynamic = ["version"]
description = "Innerverz Python project template"
authors = [
  { name = "Kiyoon Kim" },
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["development", "template", "innerverz"]
dependencies = [
  "coloredlogs >= 15.0.1",
  "verboselogs >= 1.7",
  "rich >= 13.6.0",
]

[project.optional-dependencies]
dev = [
  "black >= 23.9.0",
]
test = [
  "pytest >= 7.4.0",
  "pytest-cov >= 4.1.0",
  "tox >= 4.11.0",
]

[project.urls]
"Homepage" = "https://github.com/innerverz-ai/python-project-template-2023"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=zproject"
testpaths = [
  "tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 4.0
envlist = python3.10, python3.11, python3.12
isolated_build = true

[gh-actions]
python =
    3.10: python3.10
    3.11: python3.11
    3.12: python3.12

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -r{toxinidir}/requirements_dev.txt
commands =
    pytest --basetemp={envtmpdir}
"""

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py310"

# Black will enforce line length to be 88, except for docstrings and comments.
# We set it to 120 so we have more space for docstrings and comments.
line-length = 120

# E402: Module level import not at top of file
ignore = ["E402"]

[tool.coverage.report]
omit = [
  "src/zproject/_version.py",
]
